--- a/Multiclassification_Analysis.ipynb
+++ b/Multiclassification_Analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In a multiclassification problem the limitaitons like, unbalalnced data and more number of classes are present, which can be addressed using different approaches like SMOTE algorithm, ONE VS One/ One Vs REST binary classifiers, and Linear discriminant analysis.\n",
+    "In a multiclassification problem the limitations like, unbalalnced data and more number of classes are present, which can be addressed using different approaches like SMOTE algorithm, ONE VS One/ One Vs REST binary classifiers, and Linear discriminant analysis.\n",
     "First the issue of unbalanced data is analysed by building models on the unbalanced data and then balancing the data using SMOTE algorithm and then the performance of the models on the balanced data is verified."
    ]
   },
